tests/baselines/reference/ThisInConstructorParameter1.errors.txt
==== tests/cases/compiler/thisInConstructorParameter1.ts (1 errors) ====
    class Foo {
        public y;
        constructor(x = this.y) { }
                        ~~~~
!!! error TS2155: 'this' cannot be referenced in constructor arguments.
    }